Fix: permit all vercel domains for CORS